--- a/dev/partials/posts/2.html
+++ b/dev/partials/posts/2.html
@@ -55,10 +55,11 @@ In this example, the behaviour of <span class="code">catMaker</span> is modified
 </pre>
 
 <p>
-Although, this becomes rather tedious with several properties. Another thing that bothers me about this is that the specifier object is accessible to all methods we are attaching to the (plugins) instance. That feels messy. When the cat grows, you lose intellectual comprehension.
+Although this becomes rather tedious with several properties. Also problematic, nothing can be said about what properties an inner function requires from the specifier without examining its body. Within <span class="code">cat.meow</span>, <span class="code">spec.purr</span> is used, but we had to examine the function to know this.
+
 </p>
 <h3>A Functional Approach, Enter Currying</h3>
-<p>Ideally, every method of this instance would <strong>only have access to the properties from the specifier that it needs</strong>. One solution is to curry the functions, and define them in an outer scope:
+<p>Ideally, every method of this instance would <strong>only have access to the properties from the specifier that it needs</strong>, and these properties would be visible in the function signature. One solution is to curry the functions, and define them in an outer scope:
 </p>
 
 <pre>
@@ -80,4 +81,4 @@ jinxie = catMaker purr: 'purrrr...', purrVolume: 99, weight: 3</code>
 </pre>
 
 <p>
-<span class="code">meowBuilder</span> does not have access to the specifier or the internal instance because it is defined outside of their scope. Furthermore, via the closure that is created, <span class="code">meowBuilder</span> has access to copies of the (primitive) arguments passed to it, instead of references to properties of the specifier object. Yay.<p>
+<span class="code">meowBuilder</span> does not have access to the specifier or the internal instance because it is defined outside of their scope. Furthermore, via the closure that is created, <span class="code">meowBuilder</span> has access to copies of the (primitive) arguments passed to it, instead of references to properties of the specifier object.<p>
