--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
-    <meta name="description" content="Taylor McIntyre Portfolio Website. I'm a Web Developer, a Designer, and a Experience Enthusiast. Come see my work and blog on JavaScript, Node JS, Mongo DB, Angular JS, and more.">
+    <meta name="description" content="Taylor McIntyre Portfolio Website. I'm a Web Developer, a Designer, and an Experience Enthusiast. Come see my work and blog on JavaScript, Node JS, Mongo DB, Angular JS, and more.">
 
 
     <!-- build:style bundle -->
